--- a/Geocoding.ipynb
+++ b/Geocoding.ipynb
@@ -2,9 +2,134 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " -- pip install --upgrade certifi\n",
+      " -- removing any existing file or link\n",
+      " -- creating symlink to certifi certificate bundle\n",
+      " -- setting permissions\n",
+      " -- update complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "# install_certifi.py\n",
+    "#\n",
+    "# sample script to install or update a set of default Root Certificates\n",
+    "# for the ssl module.  Uses the certificates provided by the certifi package:\n",
+    "#       https://pypi.org/project/certifi/\n",
+    "import os\n",
+    "import os.path\n",
+    "import ssl\n",
+    "import stat\n",
+    "import subprocess\n",
+    "import sys\n",
+    "STAT_0o775 = ( stat.S_IRUSR | stat.S_IWUSR | stat.S_IXUSR\n",
+    "             | stat.S_IRGRP | stat.S_IWGRP | stat.S_IXGRP\n",
+    "             | stat.S_IROTH |                stat.S_IXOTH )\n",
+    "def main():\n",
+    "    openssl_dir, openssl_cafile = os.path.split(\n",
+    "        ssl.get_default_verify_paths().openssl_cafile)\n",
+    "    print(\" -- pip install --upgrade certifi\")\n",
+    "    subprocess.check_call([sys.executable,\n",
+    "        \"-E\", \"-s\", \"-m\", \"pip\", \"install\", \"--upgrade\", \"certifi\"])\n",
+    "    import certifi\n",
+    "    # change working directory to the default SSL directory\n",
+    "    os.chdir(openssl_dir)\n",
+    "    relpath_to_certifi_cafile = os.path.relpath(certifi.where())\n",
+    "    print(\" -- removing any existing file or link\")\n",
+    "    try:\n",
+    "        os.remove(openssl_cafile)\n",
+    "    except FileNotFoundError:\n",
+    "        pass\n",
+    "    print(\" -- creating symlink to certifi certificate bundle\")\n",
+    "    os.symlink(relpath_to_certifi_cafile, openssl_cafile)\n",
+    "    print(\" -- setting permissions\")\n",
+    "    os.chmod(openssl_cafile, STAT_0o775)\n",
+    "    print(\" -- update complete\")\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>addr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>Itämerenkatu 14, 00101 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>Kampinkuja 1, 00100 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>Kaivokatu 8, 00101 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>Hermannin rantatie 1, 00580 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>Tyynenmerenkatu 9, 00220 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                                           addr\n",
+       "0  1000       Itämerenkatu 14, 00101 Helsinki, Finland\n",
+       "1  1001          Kampinkuja 1, 00100 Helsinki, Finland\n",
+       "2  1002           Kaivokatu 8, 00101 Helsinki, Finland\n",
+       "3  1003  Hermannin rantatie 1, 00580 Helsinki, Finland\n",
+       "4  1005     Tyynenmerenkatu 9, 00220 Helsinki, Finland"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import necessary modules\n",
     "import pandas as pd\n",
@@ -12,30 +137,167 @@
     "from shapely.geometry import Point\n",
     "\n",
     "# Filepath\n",
-    "fp = r\"data/addresses.txt\"\n",
+    "fp = \"/Users/luyc/Desktop/Automated GIS python/lesson 3/data/addresses.txt\"\n",
     "\n",
     "# Read the data\n",
     "data = pd.read_csv(fp, sep=';')\n",
     "\n",
     "# data check\n",
     "len(data)\n",
-    "data.head()\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>address</th>\n",
+       "      <th>id</th>\n",
+       "      <th>addr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POINT (24.91556 60.16320)</td>\n",
+       "      <td>Ruoholahti, Itämerenkatu, Ruoholahti, Länsisat...</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>Itämerenkatu 14, 00101 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POINT (24.93169 60.16902)</td>\n",
+       "      <td>Kamppi, Kampinkuja, Kamppi, Eteläinen suurpiir...</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>Kampinkuja 1, 00100 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>POINT (24.94168 60.16996)</td>\n",
+       "      <td>Bangkok9, Kaivokatu, Keskusta, Kluuvi, Eteläin...</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>Kaivokatu 8, 00101 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>POINT (24.97193 60.19700)</td>\n",
+       "      <td>Hermannin rantatie, Kyläsaari, Hermanni, Helsi...</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>Hermannin rantatie 1, 00580 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>POINT (24.92154 60.15671)</td>\n",
+       "      <td>9, Tyynenmerenkatu, Jätkäsaari, Länsisatama, E...</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>Tyynenmerenkatu 9, 00220 Helsinki, Finland</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    geometry  \\\n",
+       "0  POINT (24.91556 60.16320)   \n",
+       "1  POINT (24.93169 60.16902)   \n",
+       "2  POINT (24.94168 60.16996)   \n",
+       "3  POINT (24.97193 60.19700)   \n",
+       "4  POINT (24.92154 60.15671)   \n",
+       "\n",
+       "                                             address    id  \\\n",
+       "0  Ruoholahti, Itämerenkatu, Ruoholahti, Länsisat...  1000   \n",
+       "1  Kamppi, Kampinkuja, Kamppi, Eteläinen suurpiir...  1001   \n",
+       "2  Bangkok9, Kaivokatu, Keskusta, Kluuvi, Eteläin...  1002   \n",
+       "3  Hermannin rantatie, Kyläsaari, Hermanni, Helsi...  1003   \n",
+       "4  9, Tyynenmerenkatu, Jätkäsaari, Länsisatama, E...  1005   \n",
+       "\n",
+       "                                            addr  \n",
+       "0       Itämerenkatu 14, 00101 Helsinki, Finland  \n",
+       "1          Kampinkuja 1, 00100 Helsinki, Finland  \n",
+       "2           Kaivokatu 8, 00101 Helsinki, Finland  \n",
+       "3  Hermannin rantatie 1, 00580 Helsinki, Finland  \n",
+       "4     Tyynenmerenkatu 9, 00220 Helsinki, Finland  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "# Import the geocoding tool\n",
     "from geopandas.tools import geocode\n",
     "\n",
     "# Geocode addresses using Nominatim. Remember to provide a custom \"application name\" in the user_agent parameter!\n",
-    "geo = geocode(data['addr'], provider='nominatim', user_agent='autogis_xx', timeout=4)\n",
+    "geo = geocode(data['addr'], provider='nominatim', user_agent='luyc', timeout=4)\n",
     "\n",
     "# table join\n",
     "join = geo.join(data)\n",
-    "join.head()\n",
-    "\n",
+    "join.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Output file path\n",
-    "outfp = r\"data/addresses.shp\"\n",
+    "outfp = \"/Users/luyc/Desktop/Automated GIS python/lesson 3/data/address.shp\"\n",
     "\n",
     "# Save to Shapefile\n",
     "join.to_file(outfp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Large data frame\n",
+    "from geopy.geocoders import Nominatim\n",
+    "from geopy.extra.rate_limiter import RateLimiter\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Initiate geocoder\n",
+    "geolocator = Nominatim(user_agent='autogis_xx')\n",
+    "\n",
+    "# Create a geopy rate limiter:\n",
+    "geocode_with_delay = RateLimiter(geolocator.geocode, min_delay_seconds=1)\n",
+    "\n",
+    "# Apply the geocoder with delay using the rate limiter:\n",
+    "data['temp'] = data['addr'].apply(geocode_with_delay)\n",
+    "\n",
+    "# Get point coordinates from the GeoPy location object on each row:\n",
+    "data[\"coords\"] = data['temp'].apply(lambda loc: tuple(loc.point) if loc else None)\n",
+    "\n",
+    "# Create shapely point objects to geometry column:\n",
+    "data[\"geometry\"] = data[\"coords\"].apply(Point)"
    ]
   }
  ],
